Expanded basic html template.

--- a/index.html
+++ b/index.html
@@ -2,12 +2,25 @@
 <html>
 
     <head>
-        <title>Insert blog title here</title>
+        <title>head/title/ Site Title</title>
 
     </head>
 
     <body>
-        <h1>h1 heading</h1>
+        <h1>body/h1/ Blog Heading</h1>
+        
+        <h2>body/h2/ Blog Subheading 1</h2>
+        <p>
+            body/p/ Blog text 1
+        </p>
+
+        <h2>body/h2/ Blog Subheading 2</h2>
+        <p>
+            body/p/ Blog text 2 <br>
+            <strong>strongText</strong> <br>
+            <em>emText</em> <br>
+            <u>uText</u> <br>
+        </p>
     
     </body>
 
