Added author image and name.

--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
             <em>emText</em> <br>
             <u>uText</u> <br>
         </p>
+
+        <img src='img/author.PNG' alt="Author">
+        
+        <p>James Ha</p>
     
     </body>
 
