Added internal link for the author.

--- a/index.html
+++ b/index.html
@@ -23,8 +23,11 @@
         </p>
 
         <img src='img/author.PNG' alt="Author">
+        <a href="img/author.PNG" target="_blank">author</a>
         
-        <p>James Ha</p>
+        <p>
+            James Ha
+        </p>
 
         <a href="https://www.google.com">Link to Google</a>
     
