--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
     <head>
         <title>Site Title</title>
-
+        <link rel="stylesheet" type="text/css" href="css/style.css">
     </head>
 
     <body>
@@ -16,13 +16,13 @@
 
         <h2>Blog Subheading 2</h2>
         <p>
-            body/p/ Blog text 2 <br>
+            body/p/ Blog text 2<br>
             <strong>strongText</strong> <br>
             <em>emText</em> <br>
             <u>uText</u> <br>
         </p>
-
-        <img src='img/author.PNG' alt="Author">
+ 
+        <img src="img/author.PNG" alt="Author">
         <a href="img/author.PNG" target="_blank">author</a>
         
         <p>
