Add image from a website.

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
  
         <img src="img/author.PNG" alt="Author">
         <a href="img/author.PNG" target="_blank">author</a>
+
+        <img src="https://upload.wikimedia.org/wikipedia/commons/7/74/കൈതച്ചക്ക.jpg">
         
         <p>
             James Ha
