Resized image and added list.

--- a/index.html
+++ b/index.html
@@ -14,6 +14,20 @@
             body/p/ Blog text 1
         </p>
 
+        <ol>
+            <li>item1</li>
+            <li>item2</li>
+            <ol>
+                <li>subitem1</li>
+                <li>subitem2</li>
+            </ol>
+        </ol>
+
+        <ul>
+            <li>item1</li>
+            <li>item2</li>
+        </ul>
+
         <h2>Blog Subheading 2</h2>
         <p>
             body/p/ Blog text 2<br>
@@ -22,10 +36,10 @@
             <u>uText</u> <br>
         </p>
  
-        <img src="img/author.PNG" alt="Author">
+        <img src="img/author.PNG" alt="Author" width="42" height="42">
         <a href="img/author.PNG" target="_blank">author</a>
 
-        <img src="https://upload.wikimedia.org/wikipedia/commons/7/74/കൈതച്ചക്ക.jpg">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/7/74/കൈതച്ചക്ക.jpg" width="42" height="42">
         
         <p>
             James Ha
